# dynamic-ppp

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: weekly-ppp-refresh.yml
dynamic_ppp_api/: __init__.py  api.py  config.py  exceptions.py  main.py  models.py  pricing.py  refresh_data.py  runtime.py
dynamic_ppp_api/data/: ppp_snapshot.json
dynamic_ppp_api/providers/: __init__.py  base.py  geoip_mmdb.py  maxmind.py  ppp.py
tests/: test_api.py  test_pricing.py
