[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-ppp-api"
version = "0.1.0"
description = "Production-ready FastAPI service for PPP-based regional pricing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "geoip2>=5.0,<6.0",
  "httpx>=0.27,<1.0",
  "pydantic-settings>=2.2,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
ppp-api-refresh = "dynamic_ppp_api.refresh_data:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["dynamic_ppp_api*"]

[tool.setuptools.package-data]
dynamic_ppp_api = ["data/*.json"]
